apps/staging/glefer-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: glefer
spec:
  rules:
  - host: staging.cv.glefer.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  tls:
  - hosts:
    - staging.cv.glefer.fr
    secretName: staging-nginx-tls
